# seasonal-spirals

./: .gitignore  CHANGELOG.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: colour_scale_exploration.ipynb  cutoff_exploration.ipynb  demo.ipynb  month_label_edge_cases.ipynb
src/seasonal_spirals/: __init__.py  _colormap.py  _colourmap.py  _geometry.py  interactive.py  spiral.py  wikipedia.py
tests/: conftest.py  test_colormap.py  test_colourmap.py  test_geometry.py  test_interactive.py  test_spiral.py  test_wikipedia.py
