[project]
name = "seasonal-spirals"
version = "0.1.0"
description = "Visualize time series data as seasonal spiral charts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
matplotlib = [
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seasonal_spirals"]

[dependency-groups]
dev = [
    "matplotlib>=3.7",
    "pytest>=9.0.2",
]
